<resources>
    <string name="app_name">Wonderful Notes</string>
    <string name="fab_text">New Note</string>
    <string name="title_edit_hint">Note Title</string>
    <string name="note_edit_hint">Start writing…</string>

    <string name="highlight_button_description">Highlight button</string>

    <string name="back_button_description">Back button</string>
    <string name="copy_button_description">Copy button</string>
    <string name="info_button_description">Info button</string>
    <string name="delete_button_description">Delete button</string>

    <string name="home_item">Home</string>
    <string name="import_item">Import</string>
    <string name="export_item">Export</string>
    <string name="cloud_item">Cloud</string>
    <string name="cloud_import_item">Import from Cloud</string>
    <string name="cloud_export_item">Export to Cloud</string>
    <string name="others_item">Others</string>
    <string name="settings_item">Settings</string>
    <string name="about_item">About</string>
    <string name="signout_item">Sign out</string>

    <string name="welcome">Welcome!</string>

    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
</resources>
