<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/general_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home_item"
            android:title="@string/home_item"
            android:checked="true"
            android:icon="@drawable/home_menu_icon"/>
        <item
            android:id="@+id/import_item"
            android:title="@string/import_item"
            android:checked="true"
            android:icon="@drawable/import_menu_icon"/>
        <item
            android:id="@+id/export_item"
            android:title="@string/export_item"
            android:checked="true"
            android:icon="@drawable/export_menu_icon"/>
        <item
            android:id="@+id/settings_item"
            android:title="@string/settings_item"
            android:checked="true"
            android:icon="@drawable/settings_menu_icon"/>

        <item
            android:id="@+id/about_item"
            android:title="@string/about_item"
            android:checked="true"
            android:icon="@drawable/info_menu_icon"/>

    </group>

</menu>